# StreamGate

./: .env.example  .gitignore  README.md  pyproject.toml  test.ipynb
app/: main.py
app/api/: chat.py  diagnostics.py
app/core/: config.py  errors.py  limiter.py  logger.py  sse.py
app/middleware/: request_id.py
app/schemas/: chat.py  common.py
app/services/: chat_stream_service.py  ragflow_client.py  user_service.py
docs/superpowers/plans/: 2026-05-25-engineering-hardening.md
tests/: conftest.py  test_chat_stream.py  test_diagnostics.py  test_main_lifespan.py  test_ragflow_client.py
